# slurmtutorial

./: .gitignore  Readme.md  pyproject.toml
examples/: array_job.sbatch  checkpoint.py  gpu.sbatch  gpu_check.py  gpu_mig_16gb.sbatch  gpu_mig_33gb.sbatch  pi_estimate.py  primes.py  requeue.sbatch  srun_demo.sbatch  step_a.sbatch  step_b.sbatch
figures/: README.md
