[project]
name = "slurmtutorial"
version = "0.1.0"
description = "Hands-on Slurm tutorial: runnable example jobs and an intro slide deck."
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",       # used by examples/gpu_check.py (CUDA 12.4 build, see below)
    "numpy>=1.24",      # torch interop (silences a startup warning)
    "jupyterlab>=4.0",  # used by the "Run Jupyter" section
]

# The pi/primes/checkpoint examples are pure stdlib and need no dependencies.

# --- torch: always the CUDA 12.4 build -------------------------------------
# torch is pulled from the PyTorch cu124 index (not PyPI), so `uv sync` installs
# a GPU-capable build everywhere and it's pinned in uv.lock. Set up any machine
# (cluster login node, etc.) with a plain:  uv sync
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
